--- a/css/header.css
+++ b/css/header.css
@@ -108,7 +108,7 @@
         top: 0;
     }
     .header_title {
-        height: 400px;
+        height: 150px;
         display: flex;
         justify-content: center;
         align-items: center;
