--- a/css/root.css
+++ b/css/root.css
@@ -46,13 +46,13 @@
 
 @media (max-width: 400px) {
     :root {
-        --padding: 15px;
-        --padding-width: 25px;
-        --margin: 10px;
-        --h1-font-size: 2.8em;
-        --h2-font-size: 2.4em;
-        --h3-font-size: 2.2em;
-        --h4-font-size: 2em;
-        --p-font-size: 1.8em;
+        --padding: 5px;
+        --padding-width: 10px;
+        --margin: 5px;
+        --h1-font-size: 1.3em;
+        --h2-font-size: 0.8em;
+        --h3-font-size: 0.8em;
+        --h4-font-size: 0.7em;
+        --p-font-size: 0.6em;
     }
 }
